--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,18 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_schedule"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
-
+        android:title="@string/title_week_schedule" />
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
-
-    <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_achievements"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_achievements" />
+    <item
+        android:id="@+id/navigation_lessons"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="@string/title_lessons" />
+    <item
+        android:id="@+id/navigation_settings"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/title_settings" />
 
 </menu>
