--- a/app/src/main/res/layout/lessons_fragment.xml
+++ b/app/src/main/res/layout/lessons_fragment.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScheduleFragment">
+    tools:context=".LessonsFragment">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="课程表" />
+        android:text="课程" />
 
 </FrameLayout>
